v2.3.0 Tue 04 Jul 2023
  Batch example: Raise exception when API key fails (quota, missing API key)
  Batch example: Raise exception when input file contains an empty line. Better
    early than risking errors later during the async geocoding
  Batch example: The CSV '1, "street,city"' were parsed as 3 columns, not the
    expected 2 columns
  Test suite: Switched from Travis-CI to Github Actions
  Dependencies: Requests 2.26->2.31, backoff 1.10->2.2.1, because only those say to support Python 3.10

v2.2.0 Fri 05 May 2023
  Using requests > 2.26 , pyopenssl no longer a dependency
  Allow setting the http protocol to make API requests (less secure)
  Batch example: add progress bar, can be switched off
  Batch example: add image of output to README
  Examples: mark scripts as executable

v2.1.1 Thu 20 Apr 2023
  Add python 3.11, no longer test against python 3.6
  Test suite: add pytest-asyncio to enable async tests
  Batch example: exception handling caused another exception
  Batch example: by default don't request annotations (faster)
  Documentation improvements

v2.1.0 Thu 13 Oct 2022
  Better handling of non-JSON error responses from API
  Test on Python 3.10

v2.0.0 Thu 15 Jul 2021
  Python 2 no longer supported
  New geocode_async and reverse_geocode_async methods
  You can now reuse HTTP connections for multiple requests by using a `with` block
  Updated examples/batch.py using asyncronous/parallel requests, much faster
  Mayor refactor of test suite
  Some tests now run against the live API endpoint using test API keys

v1.2.2 Tue 3 Nov 2020
  Test on Python 3.9

v1.2.1 Wed 6 May 2020
  Ensure OpenSSL is available on installation
  Add exponential backoff to HTTP requests

v1.2 Sun 9 Jun 2019
  Use https as default
  Handle 401 and 403 exceptions
  Documentation clean up
  Test proximity works and add an example to README

v1.1.5 Sun 30 Sep 2018
  Update setup.py to show project description on pypi.org

v1.1.4 Mon 19 Jul 2015